@@ -13,7 +13,7 @@
       a new feature, etc.<br>
       <h2 id="toc1">Since v7.0</h2>
       <div class="wiki" style="display: block;">OpenXava source code is no
-        longer included in OpenXava distribution, now you have to get it from <a
+        longer included in OpenXava distribution, now you have to get it from <a
           href="https://github.com/openxava/openxava">OpenXava GitHub repository</a>.
         The code of OpenXava framework is in the project <i>openxava</i> inside
         the repository:</div>
@@ -32,12 +32,12 @@
         <img src="files/add-perspective-eclipse.png" alt=""></div>
       <div class="wiki" style="display: block;">It shows a dialog, choose the
         Git perspective:</div>
-      <div class="wiki" style="display: block;"><img src="files/choose-git-perspective-eclipse.png"
+      <div class="wiki" style="display: block;"><img src="files/choose-git-perspective-eclipse.png"
           alt=""><br>
         <p>In Git perspective click on <i>Clone a Git repository</i>:</p>
         <img src="files/clone-git-repository-option-eclipse.png" alt="">
-        <p>Given that you have copied OpenXava repository the URI is
-          automatically filled, just click on <i>Next</i>:</p>
+        <p>Given that you have copied it from GitHub page, the OpenXava
+          repository URI has been automatically filled, just click on <i>Next</i>:</p>
         <img src="files/clone-git-repository-step1-eclipse.png" alt="">
         <p>It shows all the branches, just click on <i>Next</i> again:</p>
         <img src="files/clone-git-repository-step2-eclipse.png" alt="">
@@ -48,15 +48,15 @@
         <p>After it you have the <i>openxava </i>repository listed in left
           side of OpenXava Studio:</p>
         <img src="files/openxava-repository-git-perspective-eclipse.png" alt="">
-        <p>Congratulation the OpenXava repository is downloaded in your computer
-          and configured in OpenXava Studio. The next step to import the <i>openxava</i>
-          project into your workspace.</p>
+        <p>Congratulations! The OpenXava repository is downloaded in your
+          computer and configured in OpenXava Studio. The next step to import
+          the <i>openxava</i> project into your workspace.</p>
         <h3>Import openxava into workspace</h3>
         <p>First, go back to Java perspective, to that click on the
           corresponding button on top right side in OpenXava Studio:</p>
         <img src="files/change-to-java-perspective-eclipse.png" alt="">
-        <p>To import the openxava project click on <i>File &gt; Import...</i>:
-        </p>
+        <p>To import the <i>openxava</i> project click on <i>File &gt;
+            Import...</i>: </p>
         <img src="files/file-import-eclipse.png" alt="">
         <p>Now select <i>Git &gt; Projects from Git</i> and click on <i>Next</i>:</p>
         <img src="files/import-step1-eclipse.png" alt="">
@@ -69,7 +69,7 @@
         <p>Make sure <i>openxava</i> is checked in click on <i>Finish</i>:</p>
         <img src="files/import-step5-eclipse.png" alt="">
         <p>Finally the <i>openxava</i> project with all its code is in your
-          workspace.</p>
+          workspace:</p>
         <img src="files/openxava-project-in-workspace-eclipse.png" alt="">
         <p>Now you can modify the openxava code at your taste.</p>
         <h3>Modify OpenXava code</h3>
@@ -77,26 +77,26 @@
           SNAPSHOT. Open the <i>pom.xml</i> inside the <i>openxava</i>
           project, and verify the version:</p>
         <img src="files/openxava-pom-snapshot-version-eclipse.png" alt="">
-        <p>If you're using the master branch surely the version will be an
+        <p>If you're using the master branch surely the version will be a
           SNAPSHOT, if not modify it adding the -SNAPSHOT suffix. It means that
           is a working version, not with fixed features but ready to be
           modified.</p>
         <p>Now, it's the moment to modify the code. For example, edit the <i>NewAction.java</i>
           code and add a print, like this:</p>
         <img src="files/modifying-new-action.png" alt="">
-        <p>Now make a <i>mvn install</i> on <i>openxava</i>, in this way:</p>
+        <p>Then make a <i>mvn install</i> on <i>openxava</i>, in this way:</p>
         <img src="files/openxava-maven-install-eclipse.png" alt="">
         <p>This time it's not needed to do a <i>mvn clean</i> because we have
           just downloaded the code and <i>target</i> is empty, but if you get
-          new code from GitHub (with a pull)&nbsp; you should do a <i>mvn clean</i>
+          new code from GitHub (with a pull) you should do a <i>mvn clean</i>
           too.</p>
         <p>Now, go to your project, edit the <i>pom.xml</i> and put the <i>openxava.version</i>
-          property to the value of the OpenXava version you have in your
-          workspace:</p>
+          property to the value of the OpenXava SNAPSHOT version you have in
+          your workspace:</p>
         <img src="files/invoicing-pom-update-to-snapshot.png" alt="">
         <p>This is important, otherwise you project will not use the openxava
           you have modified, but the official version from Maven Central.</p>
-        <p>Now do a <i>mvn clean</i> on your project:</p>
+        <p>Then do a <i>mvn clean</i> on your project:</p>
         <img src="files/invoicing-maven-clean.png" alt="">
         <p>And then a <i>mvn install</i> on your project:</p>
         <img src="files/invoicing-maven-install.png" alt="">
@@ -111,11 +111,11 @@
           <li>Do a mvn war:exploded in your project. For this you can use Run As
             &gt; Build Maven ...</li>
         </ol>
-        <p>Even more, if you start your application in debug mode, clicking on
+        <p>Even more, you can start your application in debug mode, clicking on
           the bug:</p>
         <img src="files/debug-button-eclipse.png" alt="">
         <p>In this way you can modify the code in openxava and see the result
-          instantly, even without relaunching your application or reload the
+          instantly, even without relaunching your application or reloading the
           browser. Just like magic.</p>
         <h3>Branches</h3>
         <p>In the above example we have modified directly the master branch, not
@@ -128,9 +128,9 @@
         in GitHub, then create a clone of the openxava repository in your
         account. Follow the above steps importing the code from your own
         repository instead of from openxava/openxava. In this way, you can
-        create a branch, do a push, and create a PR against the original
-        OpenXava repository, where it could be approved and included in OpenXava
-        for the next official release.</div>
+        create a branch, do a push, and create a pull request against the
+        original OpenXava repository, where it could be approved and included in
+        OpenXava for the next official release.</div>
       <h2>Since v6.4</h2>
     </div>
     <div class="wiki" style="display: block;"><i>You have to define
